--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             srcset="">
         <p class="lead">Eu sou Lavinia_</p>
         <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
+        <p>Sou estudante de Computação . Ensino pensamento computacional para estudantes do Ensino
             Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
