--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Lavinia_</p>
-        <h1>Eu ensino Programação</h1>
+        <h1>Eu aprendo Programação na plataforma Alura</h1>
         <p>Sou Estudante de Computação . Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+            Fundamental e Médio.</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
