--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             srcset="">
         <p class="lead">Eu sou Lavinia_</p>
         <h1>Eu aprendo Programação na plataforma Alura</h1>
-        <p>Sou Estudante de Computação . Ensino pensamento computacional para estudantes do Ensino
+        <p>Sou Estudante de Computação, aprendo pensamento computacional para estudantes do Ensino
             Fundamental e Médio.</p>
         <p>Minhas habilidades</p>
         <div>
